# Transaction-Monitoring-System

./: .env  aml_controls.py  aml_processing.py  apply_schema_changes.py  case_management.py  check_admin_user.py  config.py  create_database.py  create_initial_tables.py  currency_service.py  database.py  generate_transaction_data.py  main.py  minimal_app.py  ml_engine.py  models.py  notification_service.py  populate_sample_data.py  pyproject.toml  reprocess_transactions.py  requirements.txt  risk_scoring.py  run_migration.py  sanctions_screening.py  utils.py
attached_assets/: Pasted-please-the-controls-just-put-them-in-one-scripts-or-something-not-for-me-to-see-them-separate-on-the-1756369345758_1756369345759.txt
ml_models/: anomaly_detection.ipynb
models/: anomaly_model_info.json  anomaly_pca.pkl  anomaly_predictor.pkl  anomaly_scaler.pkl
static/css/: banking-dashboard.css  customer.css  customer_portal.css  customer_portal_canva.css  customer_portal_professional.css  redesign.css
static/js/: admin-panel.js  analyst-panel.js  auth.js  case-management.js  customer-auth.js  customer-payment.js  customer-transfer.js  customer.js  dashboard.js  pep-lists.js  real-time-monitoring.js  sanctions-lists.js  staff-dashboard.js  utils.js
templates/: admin.html  admin_login.html  admin_profile.html  alerts.html  base.html  case-management.html  dashboard.html  reports.html  staff_dashboard.html  staff_login.html
templates/customer/: dashboard.html  login.html  payment.html  register.html  transfer.html
templates/monitoring/: customer_profile.html  customers.html  (+3 more)
(+10 files in other folders)
